Alignemts full, wide and left fixes.

--- a/sass/content/_single.scss
+++ b/sass/content/_single.scss
@@ -38,6 +38,11 @@
                 margin: 1rem auto 0 auto;
             }
         }
+        .alignleft {
+            @include breakpoint-above(lg) {
+                margin: 1rem 0.5rem 0 auto;
+            }
+        }
     }
 
     .entry-footer {
