--- a/sass/layout/_common.scss
+++ b/sass/layout/_common.scss
@@ -14,3 +14,7 @@
     }
 
 }
+
+.alignfull {
+	width: 100%;
+}
